--- a/vite-project-Azamat/package.json
+++ b/vite-project-Azamat/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.16.4",
+    "@types/loadable__component": "^5.13.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.83.0"
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.83.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
